--- a/JavascriptExecutionBenchmark/JavascriptExecutionBenchmark.csproj
+++ b/JavascriptExecutionBenchmark/JavascriptExecutionBenchmark.csproj
@@ -14,7 +14,7 @@
 		<PackageReference Include="Jurassic" Version="3.2.7" />
 		<PackageReference Include="Microsoft.ClearScript.Core" Version="7.4.5" />
 		<PackageReference Include="Microsoft.ClearScript.V8" Version="7.4.5" />
-		<PackageReference Include="Microsoft.ClearScript.V8.Native.win-x64" Version="7.4.5" />
+		<PackageReference Include="Microsoft.ClearScript.V8.Native.osx-arm64" Version="7.4.5" />
 		<PackageReference Include="NiL.JS" Version="2.5.1684" />
 	</ItemGroup>
 
